# bitbucket-env-sync

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bb_sync.py  bb_sync.spec  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
tests/: test_env_helpers.py
