[metadata]
name = bb-sync
version = 0.1.0
description = Bitbucket workspace/project sync (clone/pull) with .env inventory
license = MIT

[options]
python_requires = >=3.9
install_requires =
    requests>=2.28

[flake8]
max-line-length = 100
exclude = .git,dist,build,__pycache__

[tool:pytest]
addopts = -q
